--- a/onlineShop.BackendApi/Properties/launchSettings.json
+++ b/onlineShop.BackendApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
     },
     "onlineShop.BackendApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
