--- a/onlineShop.BackendApi/onlineShop.BackendApi.csproj
+++ b/onlineShop.BackendApi/onlineShop.BackendApi.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\onlineShop.ViewModels\onlineShop.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\" />
+  </ItemGroup>
+
 </Project>
